5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1880_2218.log
== TEST (2019-07-03 14:51:20) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g= g+1
h=0
for j in range(shape(N)[1]):
	for i in range(shape(N)[1]):
		if(j>i):
			h=h+1
print(h+g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:51:41) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g= g+1
h=0
for j in range(shape(N)[1]):
	for i in range(shape(N)[1]):
		if(j>i):
			h=h+1
print(h+g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:51:51) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g= g+1
h=0
for j in range(shape(N)[1]):
	for i in range(shape(N)[1]):
		if(j>i):
			h=h+1
print(h+g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:52:00) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g= g+1
h=0
for j in range(shape(N)[1]):
	for i in range(shape(N)[1]):
		if(j>i):
			h=h+1
print(h+g)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:52:48) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+1
h=0
for j in range(shape(N)[1]):
	for i in range(shape(N)[1]):
		if(j>i):
			h=h+1
print(round(h+g),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:52:56) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+1
h=0
for j in range(shape(N)[1]):
	for i in range(shape(N)[1]):
		if(j>i):
			h=h+1
print(round(h+g),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:53:20) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+1
h=0
for j in range(shape(N)[1]):
	for i in range(shape(N)[1]):
		if(j>i):
			h=h+1
print(round(h+g),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:54:21) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+1
g=0
for j in range(shape(N)[1]):
	for i in range(shape(N)[1]):
		if(j>i):
			g=g+1
print(round(h+g),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:56:50) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+n[i,j]

print(round(g,2)
-- ERROR:
File "XXXX", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:57:06) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+N[i]

print(round(g,2)
-- ERROR:
File "XXXX", line 10
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:57:31) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+N[i]
print(round(g,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:58:21) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+g[i]
print(round(g,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:58:43) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+g[i]
print(round(g,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:58:53) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+N[i]
print(round(g,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 14:59:52) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+N[i]
print(round(g,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:00:49) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+g[i]
print(round(g,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:01:08) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+g[i]
print(round(g,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:01:18) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
		g=g+g[i]
print(round(g,2))
-- ERROR:
File "XXXX", line 7
    g=g+g[i]
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:01:22) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+g[i]
print(round(g,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:02:46) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+N[i,j]
print(round(g,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:02:59) 
-- CODE:
from numpy import*
N = array(eval(input("Digite a matriz: ")))
g=0
for i in range(shape(N)[0]):
	for j in range(shape(N)[0]):
		if(j>i):
			g=g+N[i,j]
print(round(g,2))
-- EXECUTION TIME:
0.986739
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
14.0
---- user output:
14
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
1.38
---- user output:
1.38
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
590.9
---- user output:
590.9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
